First commit to get HHH project on git repo

--- a/Scrapbook.html
+++ b/Scrapbook.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" width="width=device-width, intial-scale=1.0">
-        <link href="resources/css/decorate.css" rel="stylesheet" type="text/css">
         <link href="resources/css/     " rel="stylesheet" type="text/css">
 
         <title>Scrapbook</title>
@@ -44,6 +43,14 @@
             <section class="lake trip">
 
             </section>
+
+            <section class="Old town">
+
+            </section>
+
+            <section class="Disposables">
+            </section>
+
         </main>
     
 
