--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="description" content="HHH's Group Website">
         <meta name="viewport" width="width=device-width, initial-scale=1.0">
 
-        <link href="resources/css/decorate.css" rel="stylesheet" type="text/css">
-        <script src="Slideshow.js"></script>
+        <link href="resources/css/indexStyle.css" rel="stylesheet" type="text/css">
+        <script src="src/Slideshow.js"></script>
 
         <title>HHH 4L</title>
     </head>
